--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -43,6 +43,17 @@ h1,
   color: var(--primary-color);
 }
 
+#sidebar .img {
+    max-width: 200px;
+    border-radius: 0%;
+
+    @include breakpoint($large) {
+      padding: 0px;
+      border: 0px solid $border-color;
+    }
+  }
+
+
 /* smaller Title Color for each page - ## in MD */
 h2 {
   color: var(--secondary-color);
